Update grub.cfg for newer Android-x86 releases

--- a/tools/grub.cfg
+++ b/tools/grub.cfg
@@ -1,8 +1,8 @@
 set timeout=10
 
 menuentry 'Android-x86' --class android-x86 {
-	search --file --no-floppy --set=root /AndroidOS/android.boot
-	linux /AndroidOS/kernel root=/dev/ram0 androidboot.hardware=android_x86_64 quiet DATA=/AndroidOS
+	search --file --no-floppy --set=root /AndroidOS/system.img
+	linux /AndroidOS/kernel root=/dev/ram0 androidboot.selinux=permissive buildvariant=eng quiet DATA=/AndroidOS
 	initrd /AndroidOS/initrd.img
 }
 
@@ -12,19 +12,19 @@ menuentry 'Windows' {
 }
 
 menuentry '[GPU]Android-x86 xforcevesa' --class android-x86 {
-	search --file --no-floppy --set=root /AndroidOS/android.boot
-	linux /AndroidOS/kernel root=/dev/ram0 androidboot.hardware=android_x86_64 quiet xforcevesa DATA=/AndroidOS
+	search --file --no-floppy --set=root /AndroidOS/system.img
+	linux /AndroidOS/kernel root=/dev/ram0 androidboot.selinux=permissive buildvariant=eng quiet xforcevesa DATA=/AndroidOS
 	initrd /AndroidOS/initrd.img
 }
 
 menuentry '[GPU]Android-x86 nomodeset' --class android-x86 {
-	search --file --no-floppy --set=root /AndroidOS/android.boot
-	linux /AndroidOS/kernel root=/dev/ram0 androidboot.hardware=android_x86_64 quiet i915.modeset=0 nomodeset DATA=/AndroidOS
+	search --file --no-floppy --set=root /AndroidOS/system.img
+	linux /AndroidOS/kernel root=/dev/ram0 androidboot.selinux=permissive buildvariant=eng quiet i915.modeset=0 nomodeset DATA=/AndroidOS
 	initrd /AndroidOS/initrd.img
 }
 
 menuentry '[GPU]Android-x86 xforcevesa nomodeset' --class android-x86 {
-	search --file --no-floppy --set=root /AndroidOS/android.boot
-	linux /AndroidOS/kernel root=/dev/ram0 androidboot.hardware=android_x86_64 quiet xforcevesa nomodeset i915.modeset=0 DATA=/AndroidOS
+	search --file --no-floppy --set=root /AndroidOS/system.img
+	linux /AndroidOS/kernel root=/dev/ram0 androidboot.selinux=permissive buildvariant=eng quiet xforcevesa nomodeset i915.modeset=0 DATA=/AndroidOS
 	initrd /AndroidOS/initrd.img
 }
