--- a/tools/grub_remix.cfg
+++ b/tools/grub_remix.cfg
@@ -1,8 +1,8 @@
 set timeout=10
 
 menuentry 'RemixOS-x86' --class android-x86 {
-	search --file --no-floppy --set=root /AndroidOS/android.boot
-	linux /AndroidOS/kernel root=/dev/ram0 androidboot.hardware=remix_x86_64 androidboot.selinux=permissive quiet DATA=/AndroidOS
+	search --file --no-floppy --set=root /AndroidOS/kernel
+	linux /AndroidOS/kernel root=/dev/ram0 androidboot.hardware=remix_x86_64 androidboot.selinux=permissive quiet SERIAL=random logo.showlogo=1 SRC=RemixOS DATA=/AndroidOS
 	initrd /AndroidOS/initrd.img
 }
 
@@ -12,19 +12,19 @@ menuentry 'Windows' {
 }
 
 menuentry '[GPU]RemixOS-x86 xforcevesa' --class android-x86 {
-	search --file --no-floppy --set=root /AndroidOS/android.boot
-	linux /AndroidOS/kernel root=/dev/ram0 androidboot.hardware=remix_x86_64 androidboot.selinux=permissive quiet xforcevesa DATA=/AndroidOS
+	search --file --no-floppy --set=root /AndroidOS/kernel
+	linux /AndroidOS/kernel root=/dev/ram0 androidboot.hardware=remix_x86_64 androidboot.selinux=permissive quiet SERIAL=random logo.showlogo=1 SRC=RemixOS xforcevesa DATA=/AndroidOS
 	initrd /AndroidOS/initrd.img
 }
 
 menuentry '[GPU]RemixOS-x86 nomodeset' --class android-x86 {
-	search --file --no-floppy --set=root /AndroidOS/android.boot
-	linux /AndroidOS/kernel root=/dev/ram0 androidboot.hardware=remix_x86_64 androidboot.selinux=permissive quiet i915.modeset=0 nomodeset DATA=/AndroidOS
+	search --file --no-floppy --set=root /AndroidOS/kernel
+	linux /AndroidOS/kernel root=/dev/ram0 androidboot.hardware=remix_x86_64 androidboot.selinux=permissive quiet SERIAL=random logo.showlogo=1 SRC=RemixOS i915.modeset=0 nomodeset DATA=/AndroidOS
 	initrd /AndroidOS/initrd.img
 }
 
 menuentry '[GPU]RemixOS-x86 xforcevesa nomodeset' --class android-x86 {
-	search --file --no-floppy --set=root /AndroidOS/android.boot
-	linux /AndroidOS/kernel root=/dev/ram0 androidboot.hardware=remix_x86_64 androidboot.selinux=permissive quiet xforcevesa nomodeset i915.modeset=0 DATA=/AndroidOS
+	search --file --no-floppy --set=root /AndroidOS/kernel
+	linux /AndroidOS/kernel root=/dev/ram0 androidboot.hardware=remix_x86_64 androidboot.selinux=permissive quiet SERIAL=random logo.showlogo=1 SRC=RemixOS xforcevesa nomodeset i915.modeset=0 DATA=/AndroidOS
 	initrd /AndroidOS/initrd.img
 }
