remove sleep.earlysuspend
Let inline kernel definitions handle this

--- a/tools/grub.cfg
+++ b/tools/grub.cfg
@@ -2,7 +2,7 @@ set timeout=10
 
 menuentry 'Android-x86' --class android-x86 {
 	search --file --no-floppy --set=root /AndroidOS/system.img
-	linux /AndroidOS/kernel root=/dev/ram0 androidboot.selinux=permissive sleep.earlysuspend=0 quiet DATA=/AndroidOS
+	linux /AndroidOS/kernel root=/dev/ram0 androidboot.selinux=permissive quiet DATA=/AndroidOS
 	initrd /AndroidOS/initrd.img
 }
 
@@ -13,18 +13,18 @@ menuentry 'Windows' {
 
 menuentry '[GPU]Android-x86 xforcevesa' --class android-x86 {
 	search --file --no-floppy --set=root /AndroidOS/system.img
-	linux /AndroidOS/kernel root=/dev/ram0 androidboot.selinux=permissive sleep.earlysuspend=0 quiet xforcevesa DATA=/AndroidOS
+	linux /AndroidOS/kernel root=/dev/ram0 androidboot.selinux=permissive quiet xforcevesa DATA=/AndroidOS
 	initrd /AndroidOS/initrd.img
 }
 
 menuentry '[GPU]Android-x86 nomodeset' --class android-x86 {
 	search --file --no-floppy --set=root /AndroidOS/system.img
-	linux /AndroidOS/kernel root=/dev/ram0 androidboot.selinux=permissive sleep.earlysuspend=0 quiet i915.modeset=0 nomodeset DATA=/AndroidOS
+	linux /AndroidOS/kernel root=/dev/ram0 androidboot.selinux=permissive quiet i915.modeset=0 nomodeset DATA=/AndroidOS
 	initrd /AndroidOS/initrd.img
 }
 
 menuentry '[GPU]Android-x86 xforcevesa nomodeset' --class android-x86 {
 	search --file --no-floppy --set=root /AndroidOS/system.img
-	linux /AndroidOS/kernel root=/dev/ram0 androidboot.selinux=permissive sleep.earlysuspend=0 quiet xforcevesa nomodeset i915.modeset=0 DATA=/AndroidOS
+	linux /AndroidOS/kernel root=/dev/ram0 androidboot.selinux=permissive quiet xforcevesa nomodeset i915.modeset=0 DATA=/AndroidOS
 	initrd /AndroidOS/initrd.img
 }
