--- a/tools/grub.cfg
+++ b/tools/grub.cfg
@@ -6,6 +6,12 @@ menuentry 'Android-x86' --class android-x86 {
 	initrd /AndroidOS/initrd.img
 }
 
+menuentry 'Android-x86 (old modprobe)' --class android-x86 {
+	search --file --no-floppy --set=root /AndroidOS/android.boot
+	linux /AndroidOS/kernel root=/dev/ram0 SRC=/AndroidOS androidboot.selinux=permissive sleep.earlysuspend=0 AUTO_LOAD=old quiet DATA=
+	initrd /AndroidOS/initrd.img
+}
+
 menuentry 'Windows' {
 	search --file --no-floppy --set=root /EFI/Microsoft/Boot/bootmgfw.efi
 	chainloader (${root})/EFI/Microsoft/Boot/bootmgfw.efi
